--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -162,6 +162,6 @@
     <!-- End Of Footer Section -->
 
 
-    <script src="/js/script.js"></script>   
+    <script src="./js/script.js"></script>   
 </body>
 </html>
