Menambahkan . pada setiap link

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
     <!-- Header Section -->
@@ -15,7 +15,7 @@
             <div class="nav">
                 <div class="logo">
                     <a href="#">
-                        <img src="/assets/Logo Saddam.png" alt="">
+                        <img src="./assets/Logo Saddam.png" alt="">
                     </a>
                 </div>
 
@@ -35,7 +35,7 @@
                 </div>
                 
                 <div class="introduction-right">
-                    <img src="/assets/vector bmi.png" alt="Hero BMI">
+                    <img src="./assets/vector bmi.png" alt="Hero BMI">
                 </div>
             </section>
         </div>
@@ -72,10 +72,10 @@
                             <legend>Jenis Kelamin</legend>
                             <div class="gender-selection">
                                 <button type="button" class="gender-option" onclick="selectGender(this, 'male')" aria-label="Laki-laki">
-                                    <img src="/assets/male.png" alt="male">
+                                    <img src="./assets/male.png" alt="male">
                                 </button>
                                 <button type="button" class="gender-option" onclick="selectGender(this, 'female')" aria-label="Perempaun">
-                                    <img src="/assets/female.png" alt="">    
+                                    <img src="./assets/female.png" alt="">    
                                 </button>
                             </div>
                         </div>
@@ -102,13 +102,13 @@
                             <legend>Tingkat aktivitas harian</legend>
                             <div class="activity-selection">
                                 <button type="button" class="activity-option" onclick="selectActivity(this, 'inactive')" aria-label="Tidak Aktif">
-                                    <img src="/assets/tidak_aktif.png" alt="Tidak Aktif">
+                                    <img src="./assets/tidak_aktif.png" alt="Tidak Aktif">
                                 </button>
                                 <!-- <button type="button" class="activity-option" onclick="selectActivity(this, 'light')" aria-label="Tidak Aktif">
                                     <img src="/assets/cukup_aktif.png" alt="Cukup Aktif">
                                 </button> -->
                                 <button type="button" class="activity-option" onclick="selectActivity(this, 'moderate')" aria-label="Tidak Aktif">
-                                    <img src="/assets/aktif.png" alt="Aktif">
+                                    <img src="./assets/aktif.png" alt="Aktif">
                                 </button>
                                 <!-- <button type="button" class="activity-option" onclick="selectActivity(this, 'active')" aria-label="Tidak Aktif">
                                     <img src="/assets/sangat_aktif.png" alt="Sangat Aktif">
