menambahkan . pada setiap link

--- a/index.html
+++ b/index.html
@@ -105,13 +105,13 @@
                                     <img src="./assets/tidak_aktif.png" alt="Tidak Aktif">
                                 </button>
                                 <!-- <button type="button" class="activity-option" onclick="selectActivity(this, 'light')" aria-label="Tidak Aktif">
-                                    <img src="/assets/cukup_aktif.png" alt="Cukup Aktif">
+                                    <img src="./assets/cukup_aktif.png" alt="Cukup Aktif">
                                 </button> -->
                                 <button type="button" class="activity-option" onclick="selectActivity(this, 'moderate')" aria-label="Tidak Aktif">
                                     <img src="./assets/aktif.png" alt="Aktif">
                                 </button>
                                 <!-- <button type="button" class="activity-option" onclick="selectActivity(this, 'active')" aria-label="Tidak Aktif">
-                                    <img src="/assets/sangat_aktif.png" alt="Sangat Aktif">
+                                    <img src="./assets/sangat_aktif.png" alt="Sangat Aktif">
                                 </button> -->
                             </div>
                         </div>
